--- a/components/articlehighlights/default.htm
+++ b/components/articlehighlights/default.htm
@@ -1,6 +1,6 @@
 {% if not __SELF__.isEmpty() %}
-    {% partial "@articlehighlights.htm" 
-        title=__SELF__.getTitle()
-        highlights=__SELF__.getHighlights()
-    %}
+	{% partial __SELF__ ~ "::templates/" ~ __SELF__.property('templates')
+		title=__SELF__.getTitle()
+		highlights=__SELF__.getHighlights()
+	%}
 {% endif %}
