--- a/components/articlelist/templates/template3.htm
+++ b/components/articlelist/templates/template3.htm
@@ -12,7 +12,7 @@
 			</div>
 			<div class="row">
 				<div class="col-xs-6">
-					<a href="#" class="btn btn-primary">Read article</a>
+					<a href="{{url}}" class="btn btn-primary">Read article</a>
 				</div>
 				<div class="col-xs-6">
 					{% if allow_share == 'yes' %}
@@ -31,5 +31,4 @@
 
 		</div>
 	</div>
-
 </div>
