--- a/components/partials/relatedarticles.htm
+++ b/components/partials/relatedarticles.htm
@@ -2,7 +2,7 @@
 	<div class="row news_column">
 		{% if image %}
 		<a class="news-image col-xs-12 center-xs" href="{{url}}">
-			<img class="news-img-top" src="{{image.getThumb(250, 250, {'mode': 'crop'})}}">
+			<img class="news-img-top" src="{{image.getThumb(__SELF__.property('thumb_width'), __SELF__.property('thumb_height'), {'mode': 'crop'})}}">
 		</a>
 		{% endif %}
 		<div class="news-container col-xs-12">
