--- a/components/articlehighlights/templates/template3.htm
+++ b/components/articlehighlights/templates/template3.htm
@@ -18,7 +18,7 @@
 							<h3 class="card-title">{{highlight.title}}</h3>
 						{% endif %}
 						{% if highlight.href %}
-							<div class="read_more">read more</div>
+							<div class="read_more">{{'read more' |_}}</div>
 						{%endif %}
 
 					{% if highlight.href %}
