--- a/components/articlelist/templates/template3.htm
+++ b/components/articlelist/templates/template3.htm
@@ -16,7 +16,7 @@
 			</div>
 			<div class="row">
 				<div class="col-xs-6">
-					<a href="{{url}}" class="btn btn-primary">Read article</a>
+					<a href="{{url}}" class="btn btn-primary">{{'Read article' |_}}</a>
 				</div>
 				<div class="col-xs-6">
 					{% if allow_share == 'yes' %}
