--- a/partials/_type.htm
+++ b/partials/_type.htm
@@ -1,5 +1,5 @@
 <?php if($record->type == 1) { ?>
-    Article
+    {{'Article' |_}}
 <?php }else{ ?>
-    Publication
+    {{'Publication' |_}}
 <?php } ?>
