--- a/components/partials/relatedarticles.htm
+++ b/components/partials/relatedarticles.htm
@@ -1,3 +1,4 @@
+
 <div class="col-xs-12 col-md-3 news-item item-{{slug}}">
 	<div class="row news_column">
 		{% if image %}
@@ -12,7 +13,7 @@
 			</div>
 			<div class="row">
 				<div class="col-xs-6">
-					<a href="#" class="btn btn-primary">Read article</a>
+					<a href="#" class="btn btn-primary">{{'Read article' |_}}</a>
 				</div>
 				<div class="col-xs-6">
 					{% if allow_share == 'yes' %}
@@ -33,3 +34,4 @@
 	</div>
 
 </div>
+
