related articles link fix

--- a/components/partials/relatedarticles.htm
+++ b/components/partials/relatedarticles.htm
@@ -16,7 +16,7 @@
 			<div class="row">
 				<div class="col-xs-6">
 
-					<a href="#" class="btn btn-primary">{{'Read article' |_}}</a>
+					<a href="{{url}}" class="btn btn-primary">{{'Read article' |_}}</a>
 
 				</div>
 				<div class="col-xs-6">
