max title length

--- a/components/articlehighlights/default.htm
+++ b/components/articlehighlights/default.htm
@@ -4,5 +4,6 @@
 		highlights=__SELF__.getHighlights()
 		width=__SELF__.property('thumb_width')
 		height=__SELF__.property('thumb_height')
+        title_max_length=__SELF__.property('title_max_length')
 	%}
 {% endif %}
