--- a/components/articlehighlights/templates/template3.htm
+++ b/components/articlehighlights/templates/template3.htm
@@ -15,7 +15,7 @@
 
 
 						{% if highlight.title %}
-							<h3 class="card-title">{{highlight.title}}</h3>
+							<h3 class="card-title">{{ highlight.title|length > title_max_length ? highlight.title|striptags|slice(0, title_max_length)|replace({"&nbsp;": " ", ".": ". "}) ~ '...' : highlight.title|striptags|replace({"&nbsp;": " ", ".": ". "})  }}</h3>
 						{% endif %}
 						{% if highlight.href %}
 							<div class="read_more">{{'read more' |_}}</div>
